fixed backend Dockerfile

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -2,7 +2,7 @@ FROM node:14.17
 RUN mkdir -p /usr/src/app
 WORKDIR /usr/src/app
 COPY package.json /usr/src/app
-RUN npm cache clean
+RUN npm cache verify
 RUN npm install
 COPY . /usr/src/app
 EXPOSE 3000
