--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,54 +2,31 @@ version: "3.7"
 services:
   frontend:
     build: frontend
-    ports:
-      - 3000:3000
-    stdin_open: true
-    volumes:
-      - ./frontend:/usr/src/app
-      - /usr/src/app/node_modules
-    container_name: frontend
-    restart: always
-    networks:
-      - react-express
+    expose:
+      - 8000
     depends_on:
-      - backend
+      - express
 
-  backend:
-    container_name: backend
+  express:
     restart: always
     build: backend
-    volumes:
-      - ./backend:/usr/src/app
-      - /usr/src/app/node_modules
     depends_on:
       - mongo
       - postgres
-    networks:
-      - express-mongo
-      - react-express
+    links:
+      - mongo
+      - postgres
     expose: 
-      - 3000
+      - 27015
+
   mongo:
-    container_name: mongo
     restart: always
-    image: mongo:5.0.1
-    volumes:
-      - ./data:/data/backend
-    networks:
-      - express-mongo
+    image: mongo:5.0.2
     expose:
       - 27017
+
   postgres:
-    container_name: postgres
     restart: always
-    image: postgres:9.6.22-buster
-    volumes:
-      - ./data:/data/backend
-    networks:
-      - express-mongo
+    image: postgres:13.3
     expose:
-      - 27017
-networks:
-  react-express:
-  express-mongo:
+      - 27016
