added make_links_postgres_table.sql to initialise the postgres table

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -41,6 +41,7 @@ services:
       - postgres_tiles_db.env
     volumes:
       - postgres_tiles_db_data:/var/lib/home-portal-server/postgres_tiles_db_data/ # persist data even if container shuts down
+      - ./make_links_postgres_table.sql:/docker-entrypoint-initdb.d/make_links_postgres_table.sql
 
 volumes:
   postgres_tiles_db_data: # named volumes can be managed easier using docker-compose
